# senttbox

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  info  senttbox.json
.github/workflows/: cmake-conan.yaml
.scripts/: gen.bat  gen.sh
cmake/: conan_config.cmake
data/: ent1.se  scene1.json
data/shaders/: Custom.frag
src/common/: CMakeLists.txt  FactoryRegistry.h  buildInfo.h
src/common/exceptions/: NotImplementedException.h
src/common/formatter/: GmtlFormatter.h
src/common/math/: DeadReckoning.cpp  DeadReckoning.h  Spatial.h
src/common/plugins/: PluginBase.cpp  PluginBase.h  PluginManager.h
src/common/serializers/: FixedStringSerializer.h
src/common/strings/: FixedLengthString.h  StringTools.h
src/core/: CMakeLists.txt
src/sandbox/: CMakeLists.txt  builderRegistrySketch.h  main.cpp
src/sandbox/KeplerOrbits/: CMakeLists.txt
src/sandbox/drone/: CMakeLists.txt  main.cpp
src/sandbox/drone/components/: Camera.h  CentralBody.h  Kinematic.h  OrbitalParameters.h  Orbiter.h  RenderModel.h  SceneProperties.h  SimulationState.h  StaticTransform.h
src/sandbox/drone/components/serializers/: CentralBody_cereal.h  Kinematic_cereal.h  OrbitalParameters_cereal.h  Orbiter_cereal.h  RenderModel_cereal.h  SceneProperties_cereal.h  StaticTransform_cereal.h
src/sandbox/drone/core/: Scene.h  Update.h  UpdateQueue.h
src/sandbox/drone/renderer/: DirectUpdater.h  Gui.h  Helpers.h  LoadOperation.h  OrbitEditorGui.h  SceneObject.h  SceneUpdater.h  ViewerCore.h  imgui_entt_entity_editor.h
src/sandbox/drone/serializers/: serializers_gmtl_cereal.h
src/sandbox/drone/systems/: BrownianPhysics.h  Gravitation.h  Orbiters.h  Physics.h  SimulationProgress.h  System.h  UpdateRenderer.h
src/sandbox/loaderTest/: CMakeLists.txt  main.cpp
src/sandbox/scenegui/: CMakeLists.txt  main.cpp
src/sandbox/sdl/: CMakeLists.txt  Orbit.h  main.cpp
src/sandbox/serializeCereal/: CMakeLists.txt  main.cpp
src/sandbox/serializeNLohmann/: CMakeLists.txt  GmtlJsonSerializer.h  SpatialJsonSerializer.h  archive.h  main.cpp
